--- a/style.css
+++ b/style.css
@@ -1,10 +1,40 @@
 body{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Otomanopee One', sans-serif;
+    margin: 0%;
+    padding: 0%;
+}
+.flexible-container{
+    display: flex;
+    margin: 5px 10px 100px 10px;
+}
+.top-bar-section{
+    background-image: url(images/shapes/Frame\ 57.jpg);
+    background-repeat: no-repeat;
+    background-position: cover;
+}
+.half-width_top-bar{
+    width: 100%;
+    height: auto;
+    text-align: center;
+}
+.half-width_top-bar img{
+    width: 50%;
+}
+
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(rgb(240, 94, 36), rgb(226, 107, 85));
+    padding: 10px 40px;
+    border-radius: 2px;
+    color: white;
     font-weight: 700;
 }
+
 h1{
     font-size: 50px;
+    text-align: center;
 }
+
 .orange-text-color{
     color: orange;
 }
@@ -15,37 +45,66 @@ h1{
     border-radius: 30px;
     color: white;
 }
-.flexible-container{
-    display: flex;
-    margin-bottom: 150px;
+
+.paragraph{
+    margin-bottom: 80px;
+    text-align: center;
+    padding: 10px;
 }
 .half-width{
-    width: 50%;
-    padding-left: 2%;
-}
-.half-width image{
     width: 80%;
+    height: auto;
+    margin-top: 50px;
+    margin-right: 120px;
+    padding-left: 10px;
+    text-align: center;
 }
-.secton-aboutMe{
+.half-width img{
+    width: 50%;
+    height: auto;
+    margin-left: 180px;
+}
+.secton-aboutUs{
     background-image: url(images/shapes/7.png);
     background-repeat: no-repeat;
+    background-size: cover;
 }
-.Recipe{
-    width:10%;
+.Recipes{
+    width:100%;
     height: 80%;
-    margin: 2%;
+    margin: 3%;
+    padding: 1%;
+    box-shadow: 10px 10px 50px gray;
+    border-radius: 20px;
+}
+.Recipes img{
+    width: 80%;
+    height: 80%;
+    margin: 5px;
     padding-left: 2%;
 }
-.Recipe image{
-    width: 30%;
-    height: 80%;
+.paragraph-receipe{
+    margin: 20px 10px 40px 10px;
+    padding: 2px;
+}
+.social-media{
+    width:80%;
+    height: auto;
+    box-shadow: 10px 10px 50px gray;
+    border-radius: 20px;
+}
+
+.app-link{
+    background-image: url(images/shapes/Frame\ 58.jpg);
+    background-repeat: no-repeat;
+    background-position: cover;
+}
+
+
+footer{
+    background-color: cadetblue;
+    background-position: cover;
+    height: 25vh;
 
 }
 
-/*.width{
-    width: 30%;
-    padding-left: 2%;
-}
-.width-image{
-    width: 40%;
-}*/
